# services/auth/internal/domain/models/user.go
@@ -4,5 +4,5 @@ type User struct {
 	ID       int64
 	Email    string
 	PassHash []byte
+	FullName string
 }
-
